PeopleStat-1 (1)/PeopleStat-1/backend/back_log.txt
[dotenv@17.3.1] injecting env (4) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
[dotenv@17.3.1] injecting env (0) from .env -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild
(node:28364) Warning: Failed to load the ES module: C:\Users\VICTUS\Desktop\PeopleStat-1\backend\controllers\authController.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
C:\Users\VICTUS\Desktop\PeopleStat-1\backend\controllers\authController.js:1
import User from '../models/User.js';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (node:internal/modules/cjs/loader:1690:18)
    at Module._compile (node:internal/modules/cjs/loader:1733:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1479:32)
    at Module._load (node:internal/modules/cjs/loader:1298:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
    at Module.require (node:internal/modules/cjs/loader:1502:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (C:\Users\VICTUS\Desktop\PeopleStat-1\backend\routes\auth.js:5:24)

Node.js v25.0.0
